
2013-??-??: 1.4.22

Features:

- Introducing Template Loader API (anatoly techtonik)
- Experimental support for Jinja2, try 'jinja2' for template_engine
  in config (anatoly techtonik)
- A new jinja2 template based on Classic schema and using Twitter
  bootstrap for responsive behaviour.  Run as - 
  python demo.py -t jinja2 nuke (Pradip P Caulagi)
- Renamed old Templates classes to Loader classes to clarify sources
  for alternative templating engines, updated docs (anatoly techtonik)
- Template selection code is moved from Loader classes into cgi.client
  limiting the responsibility of Loaders to compilation and rendering.
  Internally, templating.find_template is replaced with
  client.selectTemplate (anatoly techtonik)
- Increased generated password length to 12 symbols to slow down GPGPU
  attacks (anatoly techtonik)

Fixed:

- Fixed OpenPGP support for modern versions of libgpgme. (Bernhard Reiter)
- Restored compatibility with old style trackers (anatoly techtonik)
- Make roundup play nice with setup tools (for using with virtualenv)
  (Pradip Caulagi)
- [minor] Template responsive: make demo.py work out of the box with it,
  by setting the static_files config.ini setting to "static". 
  Footer: link fixed and hardcoded last modfied date removed. (Bernhard Reiter)
- demo.py print location of tracker home and fully erase its directory
  when nuking (anatoly techtonik)
- demo.py changing hostname in config.ini actually changes the address
  where demo.py listens. (John Rouillard)

2012-12-21: 1.4.21

Features:

- issue2550782: Added a new irker detector to send notifications on IRC
  when an issue is created or messages are added. (Ezio Melotti)
- Beta version of responsive templates using devel schema
  and Twitter Bootstrap for styling (Pradip Caulagi)
- pywin32 is no longer required to run on Windows (anatoly techtonik)
- Rewritten portalocker.py logic in ctypes for Windows (anatoly techtonik)